--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -60,6 +60,15 @@ mark {
 	color: inherit;
 }
 
+section#two p {
+	font-size: 1rem;
+}
+
+section#two li  ul{
+	margin: 0;
+	font-size: 0.9rem;
+}
+
 input::-moz-focus-inner {
 	border: 0;
 	padding: 0;
